--- a/app/src/main/res/layout/filter_button.xml
+++ b/app/src/main/res/layout/filter_button.xml
@@ -2,11 +2,14 @@
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/filter_button"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:checkable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/cardview_dark_background"
-    android:singleLine="true"
+    android:textSize="12sp"
     app:cornerRadius="20dp"
     tools:text="All">
 </com.google.android.material.button.MaterialButton>
