--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -37,7 +37,7 @@
             android:paddingBottom="15dp"
             android:layout_marginTop="15dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@id/game_detail_art"
             app:layout_constraintTop_toBottomOf="@id/game_detail_art"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
             android:paddingBottom="15dp"
             android:layout_marginTop="15dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/game_detail_title"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
             android:paddingBottom="15dp"
             android:layout_marginTop="15dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/game_detail_genres"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:paddingBottom="15dp"
             android:layout_marginTop="15dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/game_detail_multiplayer_options"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
