--- a/app/src/main/res/layout/menu_section.xml
+++ b/app/src/main/res/layout/menu_section.xml
@@ -11,13 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:paddingBottom="15dp"
+        android:layout_marginBottom="15dp"
         android:text="Section Title"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <ImageButton
+        android:id="@+id/expand_filters_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/cardview_shadow_end_color"
+        android:layout_marginStart="20dp"
+        android:paddingBottom="10dp"
+        android:src="@android:drawable/ic_menu_more"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/menu_section_title" />
 
 
 <androidx.recyclerview.widget.RecyclerView
@@ -26,10 +37,11 @@
     android:layout_height="wrap_content"
     tools:listitem="@layout/filter_button"
     android:orientation="vertical"
+    android:visibility="gone"
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
     app:spanCount="3"
     android:padding="10dp"
-    app:layout_constraintTop_toBottomOf="@id/menu_section_title" />
+    app:layout_constraintTop_toBottomOf="@id/expand_filters_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
