--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Sample Genre"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:paddingStart="15dp"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
